# photo-dossier

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.local.md.template  settings.json
.claude/agents/: code-reviewer.md  code-simplifier.md  qa-tester.md  test-writer.md  verify-app.md
.claude/rules/: python-style.md
.github/workflows/: ci.yaml
coding-agent/plans/: 1-admin-console-static-files.md  2-boris-workflow-alignment.md  2-dossier-v2-implementation.md  3-download-test-corpus.md
coding-agent/summaries/: 001-dossier-backend-and-tests.md  002-phases-11-16-frontend-security-docs.md  003-market-research-and-mobile-feasibility.md
configs/: dev.yaml  production.yaml  staging.yaml
docs/: app_cheatsheet.md  claude_code_productivity_guide.md  developer_guide.md  lessons-learned.md
docs/adr/: 000-template.md
docs/architecture/: architecture_overview.md
docs/design/: api_contract.md  design_specification.md
docs/requirements/: common_requirements.md  common_requirements_controller.json  documentation_requirements.md  documentation_requirements_controller.json  project_requirements_v1.md  project_requirements_v2.md
docs/research/: market-landscape.md  mobile-feasibility.md
frontend/: package-lock.json  vite.config.ts
scripts/: _run_with_background.sh  download_corpus.sh  download_corpus_coco.py  download_corpus_openimages.py  download_models.sh  evaluate_all.sh  git_push.sh  index_corpus.sh  monitor_corpus_download.sh  setup.sh  start_inference.sh  start_server.sh  start_vlm.sh  sync_requirements.sh  sync_requirements_controller.py
tests/: conftest.py
(+56 files in other folders)
